splash screen done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.4.1
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/images/logo.png 
 
 flutter_icons:
   android: true
